--- a/templates/chat.html
+++ b/templates/chat.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'style/chat_border.css'%}">
+    <!--<link rel="stylesheet" href="{% static 'style/chat_border.css'%}">-->
     <link rel="stylesheet" href="{% static 'style/chat.css' %}">
     <title>Document</title>
 </head>
@@ -21,6 +21,7 @@
     </div>
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="{% static 'js/chat.js' %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.min.js" integrity="sha256-qM7QTJSlvtPSxVRjVWNM2OfTAz/3k5ovHOKmKXuYMO4=" crossorigin="anonymous"></script>
     {% csrf_token %}
 </body>
 
