--- a/static/style/chat.css
+++ b/static/style/chat.css
@@ -10,8 +10,10 @@ body{
     background-color: #1D1F20;
 }
 .container{
-    width : 99vw;
+    width : 50vw;
     height: 99vh;
+    border:1px solid black;
+    background: white;
 }
 .window_chat{
     width: 100%;
@@ -57,6 +59,23 @@ textarea{
     width: 20%;
 }
 
+body {
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
 
 
 
