fix bag in 'main.html' with incorrect href

--- a/templates/app.html
+++ b/templates/app.html
@@ -25,7 +25,7 @@
         <h1>Чаты</h1>
         {% for i in chats %}
         <div class="wrapper_find">  
-            <a href="/webchat/{{i}}" class="get_chat">{{i}}</a> 
+            <a href="/webchat/chat/{{i}}" class="get_chat">{{i}}</a> 
         </div>
         {% endfor %}
        </div>
