fix update db add logout

--- a/templates/app.html
+++ b/templates/app.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="{% static 'style/app.css'%}">
 </head>
 <body>
+
+    <p class="logout"><a href="/webchat/logout/">Logout</a></p>
     
     <div class="container">
-        
+
 
         <div class="find">
             <h1>Привет {{ name }}</h1>
