--- a/static/style/app.css
+++ b/static/style/app.css
@@ -2,14 +2,18 @@
     margin: 0;
     padding: 0;
 }
+.logout{
+    text-align: right;
+    padding:1rem;
+}
+.logout a{
+    color: white;
+}
 body{
     height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 .container{
-    width : 60vw;
+    width : 100%;
     height: 80vh;
     display: flex;
     flex-direction: column;
